--- a/demos/raycar/raycar.vcxproj
+++ b/demos/raycar/raycar.vcxproj
@@ -64,7 +64,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\glew-1.7.0\include;$(ProjectDir)\..\devil-1.7.8\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\..\ode-0.12\include;$(ProjectDir)\..\glew-1.7.0\include;$(ProjectDir)\..\devil-1.7.8\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)\..\glew-1.7.0\lib;$(ProjectDir)\..\devil-1.7.8\lib;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ProjectDir)\..\glew-1.7.0\bin;$(ProjectDir)\..\devil-1.7.8\lib;$(ExecutablePath)</ExecutablePath>
     <CustomBuildAfterTargets>BuildLink</CustomBuildAfterTargets>
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)\..\glew-1.7.0\include;$(ProjectDir)\..\devil-1.7.8\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\..\..\ode-0.12\include;$(ProjectDir)\..\glew-1.7.0\include;$(ProjectDir)\..\devil-1.7.8\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)\..\glew-1.7.0\lib;$(ProjectDir)\..\devil-1.7.8\lib;$(LibraryPath)</LibraryPath>
     <ExecutablePath>$(ProjectDir)\..\glew-1.7.0\bin;$(ProjectDir)\..\devil-1.7.8\lib;$(ExecutablePath)</ExecutablePath>
     <CustomBuildAfterTargets>BuiltProjectOutputGroup</CustomBuildAfterTargets>
@@ -94,7 +94,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>dSINGLE;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>false</MultiProcessorCompilation>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
@@ -147,7 +147,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>dSINGLE;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <TreatWarningAsError>true</TreatWarningAsError>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
@@ -200,11 +200,14 @@
   <ItemGroup>
     <ClCompile Include="asset.cpp" />
     <ClCompile Include="bitmap.cpp" />
+    <ClCompile Include="car.cpp" />
     <ClCompile Include="context.cpp" />
     <ClCompile Include="gameobj.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="ixfile.cpp" />
     <ClCompile Include="model.cpp" />
+    <ClCompile Include="obstacle.cpp" />
+    <ClCompile Include="ode.cpp" />
     <ClCompile Include="raycar.cpp" />
     <ClCompile Include="math.cpp" />
     <ClCompile Include="reference.cpp" />
@@ -215,6 +218,7 @@
   <ItemGroup>
     <ClInclude Include="rc_asset.h" />
     <ClInclude Include="rc_bitmap.h" />
+    <ClInclude Include="rc_car.h" />
     <ClInclude Include="rc_config.h" />
     <ClInclude Include="rc_context.h" />
     <ClInclude Include="rc_gameobj.h" />
@@ -222,11 +226,18 @@
     <ClInclude Include="rc_ixfile.h" />
     <ClInclude Include="rc_math.h" />
     <ClInclude Include="rc_model.h" />
+    <ClInclude Include="rc_obstacle.h" />
+    <ClInclude Include="rc_ode.h" />
     <ClInclude Include="rc_reference.h" />
     <ClInclude Include="rc_scene.h" />
     <ClInclude Include="rc_scenegraph.h" />
     <ClInclude Include="rc_vertexmerge.h" />
     <ClInclude Include="rc_window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ode-0.12\build\vs2010\ode.vcxproj">
+      <Project>{90aaf686-3fc3-6e46-9d2d-01861364e7e5}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
